<?xml version="1.0"?>
<package format="2">
  <name>isaac_sim_moveit</name>
  <version>0.1.0</version>
  <description>The moveit samples package</description>
  
  <maintainer email="isaac-sim@todo.todo">isaac sim and IRVL at UT Dallas</maintainer>
  
  <license>Copyright (c) 2022, NVIDIA CORPORATION. All rights reserved.
    NVIDIA CORPORATION and its licensors retain all intellectual property
    and proprietary rights in and to this software, related documentation
    and any modifications thereto.  Any use, reproduction, disclosure or
    distribution of this software and related documentation without an express
    license agreement from NVIDIA CORPORATION is strictly prohibited.</license>
  
  <url type="Documentation">https://docs.omniverse.nvidia.com/app_isaacsim/app_isaacsim/overview.html</url>
  <url type="Forums">https://forums.developer.nvidia.com/c/agx-autonomous-machines/isaac/simulation</url>

  <build_depend>std_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>fetch_description</exec_depend>
  <exec_depend>pilz_industrial_motion</exec_depend>
  <exec_depend>moveit_planners_chomp</exec_depend>
  <exec_depend>rviz_visual_tools</exec_depend>
  

  <export>

  </export>
</package>
